--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 	    <artifactId>selenium-java</artifactId>
 	    <version>3.14.0</version>
 	</dependency>
+	<dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+    	<artifactId>htmlunit-driver</artifactId>
+    	<version>2.32.1</version>
+	</dependency>
   </dependencies>
   
   
